--- a/src/components/rentsBlock/rentTypesCardsBlock.pug
+++ b/src/components/rentsBlock/rentTypesCardsBlock.pug
@@ -5,13 +5,102 @@ include ../content/content.pug
     .rentTypesCardsBlock_cards
         .rentTypesCardsBlock_cards_innerContainer(class = 'firstBlock')
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'rooms')
-
-                .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Снять квартиру
+                .rentTypesCardsBlock_cards_innerContainer_card_wrapper
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Снять квартиру
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description') Квартиры на сутки
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'buttons')
+                        +stdBtn({class: 'cardButton', text: 'Mинск', color: 'purple cardBtn'})
+                        +stdBtn({class: 'cardButton', text: 'Витебск', color: 'purple cardBtn'})
+                        +stdBtn({class: 'cardButton', text: 'Гродно', color: 'purple cardBtn'})
+                        +stdBtn({class: 'cardButton', text: 'Гомель', color: 'purple cardBtn'})
+                        +stdBtn({class: 'cardButton', text: 'Брест', color: 'purple cardBtn'})
+                        +stdBtn({class: 'cardButton', text: 'Могилев', color: 'purple cardBtn'})
+                
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'houses')
+                .rentTypesCardsBlock_cards_innerContainer_card_wrapper
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Снять коттедж на праздник
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Коттеджи и усадьбы
+
+                .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
         .rentTypesCardsBlock_cards_innerContainer
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'baths')
+                .rentTypesCardsBlock_cards_innerContainer_card_wrapper
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Попариться в бане с друзьями
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Бани и сауны
+                .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
             .rentTypesCardsBlock_cards_innerContainer_card(class = 'cars')
+                .rentTypesCardsBlock_cards_innerContainer_card_wrapper
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'title') Если срочно нужна машина
+                    .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'description empty') Авто на прокат
+                .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
+                    +circleBtn({cls: 'button', color: 'white', icon: 'arrowLeft'})
     .rentTypesCardsBlock_buttonList
-        span sdasdas
+        .rentTypesCardsBlock_buttonList_item
+            .rentTypesCardsBlock_buttonList_item_title
+                span Квартиры
+            .rentTypesCardsBlock_buttonList_item_wrapper
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Минске
+                    .rentTypesCardsBlock_buttonList_item_button_number 3567
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Гомеле
+                    .rentTypesCardsBlock_buttonList_item_button_number 2032
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Гродно
+                    .rentTypesCardsBlock_buttonList_item_button_number 2302
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Могилеве
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Бресте
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Витебск
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+        .rentTypesCardsBlock_buttonList_item
+            .rentTypesCardsBlock_buttonList_item_title
+                span Коттеджи и усадьбы
+            .rentTypesCardsBlock_buttonList_item_wrapper
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Агроусадьбы
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Коттеджи
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Загородный комплекс
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Базы отдыха
+                    .rentTypesCardsBlock_buttonList_item_button_number 110
+
+            .rentTypesCardsBlock_buttonList_item_button
+                +textSelection({text: 'Еще', icon: 'arrow'})
+                
+                
+        .rentTypesCardsBlock_buttonList_item
+            .rentTypesCardsBlock_buttonList_item_title
+                span Популярные направления
+            .rentTypesCardsBlock_buttonList_item_wrapper
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы на о. Брасласких 
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы (жилье) на Нарочи
+
+                .rentTypesCardsBlock_buttonList_item_button
+                    .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы (жилье) у воды,<br> на берегу, на озере
 
 
