--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -127,7 +127,6 @@ $hoverLine: 2px;
   &.purple {
     background: $purpleGradientRight;
     color: #fff;
-    
     text-shadow: 0 1px 2px rgb(0 0 0 / 10%);
     
     &:hover {
@@ -135,8 +134,22 @@ $hoverLine: 2px;
       box-shadow: 0px 15px 40px rgba(0, 96, 206, 0.15);
       color: #fff;
     }
+
+    &.cardBtn {
+        max-height: 33px;
+        padding: 8px 14px;
+        gap: 6px;
+        background: $c664EF9;
+        border-radius: 16px;
+        color: rgba(255, 255, 255, 0.7);          
+      }
+      &:hover{
+        background: #612bfb;
+        color: #FFFFFF;
+      }
+      
   }
-  
+ 
   &.yellow {
     padding: 9px 16px;
     gap: 5px;
@@ -240,7 +253,20 @@ $hoverLine: 2px;
     }    
 }
 
+.textSelection {
+    display: flex;
+    align-items: center;
+    @include fontStd(#FEB700, 14px, 500, 17px);
+    margin-top: 15px;
+    border-bottom: 1px solid #F5BC03;
+    &_icon {
+        margin-left: 5.5px;    
+    }
+    path{
+        color: black
+    }
 
+}
 //standard button styling--------------------------------------------------------------------------
 .stdButtonIcon {
   @include centringMixin;
@@ -266,6 +292,25 @@ $hoverLine: 2px;
     fill: #664ef9;
   }
 }
+}
+//circle button styling--------------------------------------------------------------------------
+.circleBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &.white {
+        width: 39.43px;
+        height: 39.43px;
+        box-sizing: border-box;
+        border: 1px solid #FFFFFF;
+        border-radius: 50%;
+        &:hover {
+            background: rgba(102, 78, 249, 0.1);
+        }         
+    }
+    path {
+        fill: #FFFFFF;
+    }
 }
 
 
@@ -310,3 +355,4 @@ $hoverLine: 2px;
           }
     }
 }
+
