--- a/src/components/searchBlock/searchBlockComponent.pug
+++ b/src/components/searchBlock/searchBlockComponent.pug
@@ -28,14 +28,14 @@ style
                     .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_title
                         span Город
                     .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_buttons(class= 'menuButton')
-                        +menuBtn({text: 'Выберите', cls:'primary', color: 'menuGrey', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple'},
+                        +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '130px', menuType: 'list'},
                             [{text: 'Минск'}, {text: 'Город 2'}, {text: 'Город 3'}, {text: 'Город 4'}, {text: 'Город 5'},])
                 hr
                 .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item(class= 'double')
                     .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_title
                         span Комнаты
                     .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_buttons(class= 'menuButton')
-                         +menuBtn({text: 'Выберите', cls:'primary', color: 'menuGrey', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple'},
+                         +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '130px' , menuType: 'list'},
                             [{text: 'Студия'}, {text: '1 комната'}, {text: '2 комнаты'}, {text: '3 комнаты'}, {text: '4 комнаты'},])
                 hr
                 .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item(class= 'double')
@@ -52,7 +52,7 @@ style
                 hr
                 .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item(class= 'single rightButtons')
                     .content_container_searchBlockContainer_innerContainer_bar_bottomButtons_item_buttons(class= 'standartButton rightButtons')
-                        +stdBtn({text: 'На карте', cls:'primary', color: 'white', type: 'w7', gap: '5px', icon: 'locBig', iconPlace: 'right', iconColor: 'red'})
+                        +stdBtn({text: 'На карте', cls:'primary', color: 'white', type: 'w7', gap: '5px', icon: 'locBig', iconPlace: 'right', iconColor: 'purple'})
                         +stdBtn({text: 'Показать', cls:'primary', color: 'yellow', type: 'w5', gap: '5px', icon: 'arrowLeft', iconPlace: 'right', iconColor: 'black'})
 
 
