--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -9,7 +9,7 @@ block content
     .content_container
           include ../../components/searchBlock/searchBlockComponent.pug
           include ../../components/rentsBlock/rentTypesCardsBlock.pug
-          
+          include ../../components/rentsBlock/rentRoomsCardsBlock.pug
           .content_container_spaceContainer 
           .content_container_dayRentContainer 
           .content_container_servicesContainer
