--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -123,7 +123,6 @@ $hoverLine: 2px;
   
   text-align: center;
   word-spacing: 1.77px;
-
   &.purple {
     background: $purpleGradientRight;
     color: #fff;
@@ -181,18 +180,8 @@ $hoverLine: 2px;
     box-shadow: 0px 5px 20px rgba(0, 96, 206, 0.1);
   }
   }
-}
 
-.stdBtn_innerText {
-  width: auto;
-  white-space: nowrap;
-}
-
-
-
-
-//standard menu styling--------------------------------------------------------------------------
-.stdBtn.menuGrey {
+  &.menu {
     color: #686868;
     background: #F8F8F8;
     height: 37px;
@@ -239,19 +228,48 @@ $hoverLine: 2px;
     &:hover {
         background: rgba(102, 78, 249, 0.1);
     }
-    
+    &.rentContainer {
+        padding: 0 16px;
+        width: calc(185px - 32px);
+        gap: 5px;
+        box-shadow: 0px 10px 20px rgba(0, 96, 206, 0.1);
+        ul {
+            top: 100%;
+            li {
+                
+            }
+        }
+        &:active {
+            width: calc(185px - 36px);
+            padding: 0 16px;  
+        }
+    }
     &:active {
         background: #FFFFFF;
         height: calc(37px - 4px);
         width: calc(150px - 20px);
         border: 2px solid rgba(102, 78, 249, 0.8);
         padding: 0 8px;
+
         ul {
             margin-left: -8px;
             display: block;
         }
     }    
 }
+  &_innerText {
+    width: auto;
+    white-space: nowrap;
+  }
+}
+
+
+
+
+
+
+//standard menu styling--------------------------------------------------------------------------
+
 
 .textSelection {
     display: flex;
@@ -272,7 +290,7 @@ $hoverLine: 2px;
   @include centringMixin;
   &.black {
     path {
-      fill: $black;
+        fill: $black;
     }
   }
 &.grey {
@@ -306,10 +324,33 @@ $hoverLine: 2px;
         border-radius: 50%;
         &:hover {
             background: rgba(102, 78, 249, 0.1);
+        }
+        path {
+            stroke: #FFFFFF;
         }         
     }
-    path {
-        fill: #FFFFFF;
+
+    &.heart {
+        width: 33px;
+        height: 33px;
+        background: rgba(235, 87, 87, 0.1);
+        border-radius: 22px;
+        transform: rotate(0.25deg);
+
+        path {
+            stroke: #EB5757;
+        }
+
+        &:hover {
+            path {
+                fill: rgba(235, 87, 87, 0.4);
+            }
+        }
+        &:active {
+            path {
+                fill: #EB5757;
+            }
+        }
     }
 }
 
