--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -304,4 +304,231 @@ hr {
             }
         }       
     }
-} 
+}
+
+.rentRoomsCardsBlock {
+    width: 1440px;
+    height: 970px;
+    //background-color: green;
+    margin-top: 30px;
+
+    &_background {
+        position: absolute;
+        z-index: 0;
+        width: 803px;
+        height: 970px;
+        left: 45%;
+        top: 1298px;
+        background: linear-gradient(90deg, #94AFFF 0%, #4E64F9 94.5%);;
+        opacity: 0.1;
+        border-radius: 40px 0px 0px 0px;   
+    }
+    &_innerContainer {
+        margin-top: 32px;
+        margin-left: 80px;
+        margin-right: 80px;
+        position: relative;
+        &_top {
+            margin-bottom: 55px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            &_title {
+
+                &_small {
+
+                    margin-bottom: 15px;
+
+                    @include fontStd(white, 14px, 600, 16px);
+                    @include noSelect;
+                    text-transform: uppercase;
+                    background: linear-gradient(90deg, #9D94FF 0%, #6B50E9 94.5%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    background-clip: text;
+                    text-fill-color: transparent;
+                }
+                &_large {
+                    margin-bottom: 5px;
+                    @include fontStd(black, 25px, 700, 30px);
+                }
+            }
+            &_buttons {
+                display: flex;
+                gap: 30px;
+                
+            }
+        }
+        &_cards {
+            display: flex;
+            gap: 30px
+        }
+    }
+}
+.rentCard{
+    height: 522px;
+    width: 406px;
+    background-color: white;
+    box-shadow: (0px 20px 40px rgba(135, 124, 202, 0.15));
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    &_top {
+        width: 100%;
+        height: 226px;
+        background-color: #E4E2E2;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        &_status {
+            @include fontStd(white, 18x, 700, 22px);
+            text-shadow: 0px 1px 0px rgba(147, 79, 0, 0.3);
+            background: linear-gradient(106.06deg, #FFD54F 1.12%, #FEC100 97.96%);
+            border-radius: 0px 10px 10px 10px;
+
+            width: 66px;
+            height: 37px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            position: absolute;
+            left: 340px;
+        }
+
+        &_photo {
+            width: auto;
+            height: 100%;
+        }
+
+    }
+    &_info {
+        margin-top: 21px;
+        margin-left: 19px;
+        margin-right: 20px;
+        margin-bottom: 12px;
+        
+        &_rooms {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 26px;
+            &_price {
+                display: flex;
+                flex-direction: column;
+                span {
+                    &.price {
+                        @include fontStd(#664EF9, 20px, 700, 24px);
+                    }
+                    &.type {
+                        @include fontStd(#BDBDBD, 14px, 400, 17px);
+                    }
+                }
+            }
+            &_buttons {
+                @include fontStd(#686868, 14px, 500, 17px);
+                display: flex;
+                gap: 7.5px;
+
+                &_item {
+
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 6px;
+                    padding: 0 8px; 
+                    background-color: #F8F8F8;
+                    border-radius: 18px;
+                    max-height: 37px;
+                }
+            }  
+        }
+        &_address {
+            @include fontStd(black, 16px, 500, 19px);
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-direction: column;
+            gap: 11px;
+
+            margin-bottom: 20px;
+            &_location {
+                span {
+                    display: inline-block;
+                    margin-left: 11px;
+                    
+                }
+                path {
+                    fill: #BDBDBD;
+                }
+            }
+            &_stations {
+                @include centringMixin;
+                gap: 30px;
+
+                &_item {
+                    @include centringMixin;
+                    span {
+                        display: inline-block;
+                        margin-left: 6px;
+                    }
+                    path: {
+    
+                    }
+                }
+            }
+        }
+      
+        &_description {
+            @include fontStd(#8291A3, 12px, 400, 15px);
+        }
+    }
+    &_line{
+        display: flex;
+        justify-content: center;
+        margin: 0 19px;
+        width: calc(100% - 38px);
+        hr {
+            width: calc(100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 19px;
+            height: auto;
+            
+            opacity: 0.1;
+            border: 1px solid #664EF9;
+            margin: 0;
+        }
+    }
+    &_bottom {
+        //background-color: green;
+        width: calc(100% - 38px);
+        margin: 0 19px;
+        height: 63px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+        &_left {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 50px;   
+            height: 37px;
+
+            &_fav{
+                
+                &.active {
+                    @include centringMixin;
+                }
+
+                &.hidden {
+                    display: none;
+                }
+            }
+        }
+    }
+}
