--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -529,6 +529,9 @@ hr {
                     display: none;
                 }
             }
+            &_contacts {
+                display: flex;
+            }
         }
     }
 }
